# workout-api-server

./: .gitignore  Cargo.toml
client/: package-lock.json  package.json
client/public/: index.html
client/src/: index.js  root.js  store.js
client/src/Forms/: Styles.js
client/src/Login/: Container.js  Login.js  LoginContainer.js  LoginStyles.js  index.js
client/src/Register/: Container.js  index.js
client/src/Root/: Container.js  Root.js  RootContainer.js  index.js
client/src/Workout/: index.js
client/src/session/: index.js
migrations/2017-10-22-033111_create_users/: up.sql
migrations/2017-10-22-181558_create_exercises/: down.sql  up.sql
migrations/2017-10-22-184649_create_default_routines/: down.sql  up.sql
migrations/2017-10-22-221109_create_workouts/: up.sql
server/: .gitignore  .rustfmt.toml  Cargo.toml
server/migrations/2017-10-22-033111_create_users/: up.sql
server/migrations/2017-10-22-181558_create_exercises/: up.sql
server/migrations/2017-10-22-184649_create_default_routines/: up.sql
server/migrations/2017-10-22-221109_create_workouts/: down.sql
server/src/: db.rs  errors.rs  main.rs  redis_conn.rs  session.rs
server/templates/: index.html.hbs
src/: auth.rs  conn.rs  db.rs  errors.rs  main.rs  models.rs
static/: index.html
