[package]
name = "workout-api-server"
version = "0.1.0"
authors = ["Nicholas Dujay <nickdujay@gmail.com>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.7"
error-chain = "0.11"
jsonwebtoken = "3"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
