[package]
name = "workout-tracking-app"
version = "0.1.0"
authors = ["Nicholas Dujay <nickdujay@gmail.com>"]

[dependencies]
bcrypt = "0.1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "0.16", features = ["postgres", "chrono"] }
diesel_codegen = { version = "0.16", features = ["postgres"] }
dotenv = "0.10"
error-chain = "0.11"
jsonwebtoken = "3"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", features = ["tls"] }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git" }
r2d2-diesel = "0.16"
r2d2 = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
default-features = false
features = ["json", "handlebars_templates"]
